# DRF_market

./: docker-compose.yml  pyproject.toml
gigashop/api/: urls.py
gigashop/api/accounts/: urls.py
gigashop/api/markets/: urls.py
gigashop/apps/accounts/: models.py  serializers.py  tasks.py  views.py
gigashop/apps/accounts/migrations/: 0001_initial.py
gigashop/apps/market/: admin.py  models.py  paginators.py  permissions.py  serializers.py  urls.py  views.py
gigashop/apps/market/migrations/: 0001_initial.py  0002_alter_product_options_alter_product_title.py
gigashop/apps/user/: models.py
gigashop/core/: models.py
gigashop/settings/: settings.py  urls.py
